--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             background: url('https://upload.wikimedia.org/wikipedia/commons/7/77/Arabic_Kufic_Style.svg') no-repeat center;
             opacity: 0.15;
             transform: rotate(45deg);
+            pointer-events: none; /* <-- This is the fix */
         }
 
         .materials-container {
@@ -136,11 +137,11 @@
 
     function convertToGPA(grade) {
         if (grade >= 90 && grade <=100) return 4.0;
-        else if (grade >= 82 || grade<=89) return 3.5;
-        else if (grade >= 74 || grade <=81) return 3.0;
-        else if (grade >= 66 || grade <=73) return 2.5;
-        else if (grade >= 58 || grade <=65) return 2.0;
-        else if (grade >= 50 || grade<=57) return 1.5;
+        else if (grade >= 82 && grade <=89) return 3.5;
+        else if (grade >= 74 && grade <=81) return 3.0;
+        else if (grade >= 66 && grade <=73) return 2.5;
+        else if (grade >= 58 && grade <=65) return 2.0;
+        else if (grade >= 50 && grade <=57) return 1.5;
         else return 0.0;
     }
 
@@ -196,5 +197,3 @@
 </script>
 </body>
 </html>
-
-
