--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="google-site-verification" content="e1NF4fCJSqKWy7rQQFXEW8PZDxURUpvCMXmhJc96ix4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPA Calculater</title>
+    <meta name="description" content= "Quickly calculate your college or high school GPA with our easy-to-use online calculator. Supports 4.0. Get your accurate GPA in seconds!">
+    <title> GPA Calculator - Easily Calculate Your Grade Point Average </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <style>
         body {
@@ -197,3 +198,4 @@
 </script>
 </body>
 </html>
+
