--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An easy-to-use GPA calculator for your college or school grades. Supports a 4.0 scale and calculates your GPA accurately in seconds.">
-    <title>GPA Calculator</title>
+    <title>AOU GPA Calculator</title>
 
     <style>
         /* CSS Styles for the page */
@@ -236,3 +236,4 @@
 
 </body>
 </html>
+
