--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An easy-to-use GPA calculator for your college or school grades. Supports a 4.0 scale and calculates your GPA accurately in seconds.">
     <title>AOU GPA Calculator</title>
-
+    <meta name="google-site-verification" content="e1NF4fCJSqKWy7rQQFXEW8PZDxURUpvCMXmhJc96ix4" />
     <style>
         /* CSS Styles for the page */
         body {
@@ -236,4 +236,5 @@
 
 </body>
 </html>
+
 
