--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: #002b4c;
         }
 
-        /* AOU Logo Center */
+        /* Logo Centered */
         .logo-container {
             text-align: center;
             padding: 25px 0 10px;
@@ -109,11 +109,12 @@
         }
     </style>
 </head>
+
 <body>
 
     <!-- AOU Logo centered -->
     <div class="logo-container">
-        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAU0AAACsCAYAAAD/n/5XAAAAAXNSR0IArs4c6QA...ytmtMi2ZGZmjOOYkjSMZbjSFX53vetd7wrX9nrtXXu9QtqmSdokTeJwDLEdMwos" alt="AOU Logo">
+        <img src="aou-logo.png" alt="AOU Logo">
     </div>
 
     <div class="bg-wrapper">
@@ -153,6 +154,7 @@
                     </ul>
                 </div>
             </div>
+
         </div>
     </div>
 
